--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
   "engines": {
     "node": "12.16.0",
     "npm": "6.13.4"
