--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
+  "devDependencies": {
+    "@iconify/icons-mdi": "^1.0.150",
+    "@iconify/react": "^1.1.3",
+    "typescript": "3.3.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
