--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "@iconify/icons-mdi": "^1.0.150",
-    "@iconify/react": "^1.1.3",
-    "typescript": "3.3.3"
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
